# logger-rs

./: Cargo.toml  README.md
src/: crash_handler.rs  default.rs  event.rs  filter.rs  formatter.rs  kv.rs  lib.rs  logger.rs  metadata.rs  scope.rs  writer.rs
src/default/: logger.rs  logger_builder.rs  logger_service.rs
src/default/logger/: airbrake.rs  local_console.rs  local_file.rs  service_dispatcher.rs  tcp.rs
src/formatter/: airbrake_formatter.rs  json_formatter.rs  standard_formatter.rs
src/writer/: file_writer.rs  http_writer.rs  stderr_writer.rs  tcp_writer.rs
