[package]
name = "logger"
version = "0.1.0"
authors = ["Hiroki Tanaka <support@kumano-te.com>"]
license = "Apache-2.0"
edition = "2021"
description = "Rust logger."
repository = "https://github.com/kumanote/logger-rs"
readme = "README.md"
keywords = ["log", "logging", "logger"]

[dependencies]
once_cell = "1.9.0"
erased-serde = "0.3.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
backtrace = { version = "0.3", features = ["serde"] }
hostname = "0.3.1"
chrono = "0.4.19"
palaver = { version = "0.2" }
tokio = { version = "1.12", features = ["full"], optional = true }
http = { version = "0.2", optional = true }
hyper = { version = "0.14", features = ["client", "http1", "http2", "tcp"], optional = true }
hyper-rustls = { version = "0.23", features = ["rustls-native-certs"], optional = true }

[dev-dependencies]

[features]
default = []
tcp = []
airbrake = ["tokio", "http", "hyper", "hyper-rustls"]
